erDiagram
    projects {
        uuid id "PK"
        uuid owner_id "FK"
        uuid draft_id "FK"
        uuid loom_id "FK"
        uuid loom_version_id "FK"
        varchar name
        varchar project_type
        varchar status
        int current_pick
        int total_picks
        numeric finished_length_per_item
        int num_items
        numeric waste_between_items
        numeric warp_waste_allowance
        varchar length_unit
        timestamptz completed_at
        timestamptz abandoned_at
        text notes
        timestamptz created_at
        timestamptz updated_at
        timestamptz deleted_at
    }
    project_photos {
        uuid id "PK"
        uuid project_id "FK"
        varchar file_path
        varchar filename
        int file_size_bytes
        int display_order
        timestamptz created_at
        timestamptz updated_at
    }
    project_steps {
        uuid id "PK"
        uuid project_id "FK"
        varchar event_type
        int from_pick
        int to_pick
        timestamptz created_at
        timestamptz updated_at
    }
    alembic_version {
        varchar version_num "PK"
    }
    audit_logs {
        uuid id "PK"
        uuid actor_id
        varchar actor_email
        varchar event_type
        uuid target_user_id
        varchar target_email
        json details
        timestamptz created_at
    }
    eula_versions {
        int id "PK"
        varchar version
        text body_html
        timestamptz effective_date
        timestamptz created_at
    }
    invites {
        uuid id "PK"
        varchar email
        varchar token
        timestamptz expires_at
        timestamptz accepted_at
        timestamptz revoked_at
        uuid created_by_id "FK"
        timestamptz created_at
        timestamptz updated_at
        varchar role
        uuid user_id "FK"
    }
    loom_version_accessories {
        uuid id "PK"
        uuid loom_version_id "FK"
        text name
        timestamptz created_at
        timestamptz updated_at
    }
    loom_version_photos {
        uuid id "PK"
        uuid loom_version_id "FK"
        varchar filename
        varchar path
        int file_size_bytes
        int display_order
        timestamptz created_at
        timestamptz updated_at
    }
    loom_version_receipts {
        uuid id "PK"
        uuid loom_version_id "FK"
        varchar filename
        varchar path
        text description
        timestamptz created_at
        timestamptz updated_at
    }
    loom_versions {
        uuid id "PK"
        uuid loom_id "FK"
        int version_number
        varchar name
        date effective_date
        text description
        int num_shafts
        int num_treadles
        int num_heddles
        numeric weaving_width
        varchar weaving_width_unit
        numeric warp_waste_allowance
        varchar warp_waste_unit
        timestamptz created_at
        timestamptz updated_at
    }
    looms {
        uuid id "PK"
        uuid owner_id "FK"
        varchar loom_type
        varchar manufacturer
        varchar model_name
        varchar serial_number
        date purchase_date
        numeric purchase_price
        varchar vendor
        varchar photo_path
        boolean supports_lift_tracking
        boolean supports_treadle_tracking
        text notes
        timestamptz created_at
        timestamptz updated_at
        timestamptz deleted_at
    }
    pending_signups {
        uuid id "PK"
        varchar clerk_user_id
        varchar email
        varchar display_name
        timestamptz created_at
        timestamptz updated_at
    }
    drafts {
        uuid id "PK"
        uuid owner_id "FK"
        varchar name
        text description
        varchar wif_filename
        varchar wif_path
        int num_shafts
        int num_treadles
        int warp_threads
        int weft_threads
        boolean has_threading
        boolean has_tieup
        boolean has_treadling
        boolean has_liftplan
        boolean has_color_palette
        boolean liftplan_generated
        jsonb lint_warnings
        jsonb lint_errors
        varchar wif_source_software
        varchar wif_source_version
        varchar preview_path
        boolean is_shared
        varchar share_slug
        timestamptz created_at
        timestamptz updated_at
        timestamptz deleted_at
    }
    seed_runs {
        int id "PK"
        timestamptz ran_at
    }
    skeins {
        uuid id "PK"
        uuid yarn_id "FK"
        varchar status
        numeric current_yardage
        numeric current_weight_oz
        numeric current_weight_g
        text notes
        timestamptz created_at
        timestamptz updated_at
    }
    user_identities {
        uuid id "PK"
        uuid user_id "FK"
        varchar provider
        varchar provider_sub
        varchar email
        timestamptz created_at
    }
    users {
        uuid id "PK"
        varchar email
        varchar display_name
        varchar oidc_sub
        varchar clerk_user_id
        boolean is_admin
        boolean is_superuser
        boolean is_active
        varchar theme
        varchar activity_theme
        int idle_timeout_minutes
        varchar measurement_system
        boolean ai_training_consent
        varchar eula_accepted_version
        timestamptz eula_accepted_at
        timestamptz last_active_at
        varchar approved_by_name
        varchar approved_by_email
        boolean clerk_banned
        varchar deletion_state
        timestamptz deletion_initiated_at
        boolean clerk_errored
        timestamptz created_at
        timestamptz updated_at
        timestamptz deleted_at
    }
    yarns {
        uuid id "PK"
        uuid owner_id "FK"
        varchar brand
        varchar name
        varchar weight_notation
        varchar weight_category
        varchar fiber_content
        varchar color_name
        varchar color_hex
        numeric unit_weight_oz
        numeric unit_weight_g
        numeric unit_yardage
        numeric yards_per_pound
        int sett_min
        int sett_max
        varchar purchase_source
        numeric purchase_price
        date purchase_date
        text notes
        varchar photo_path
        timestamptz created_at
        timestamptz updated_at
        timestamptz deleted_at
    }

    looms ||--o{ projects : "loom_id"
    loom_versions ||--o{ projects : "loom_version_id"
    users ||--o{ projects : "owner_id"
    drafts ||--o{ projects : "draft_id"
    projects ||--o{ project_photos : "project_id"
    projects ||--o{ project_steps : "project_id"
    users ||--o{ invites : "created_by_id"
    users ||--o{ invites : "user_id"
    loom_versions ||--o{ loom_version_accessories : "loom_version_id"
    loom_versions ||--o{ loom_version_photos : "loom_version_id"
    loom_versions ||--o{ loom_version_receipts : "loom_version_id"
    looms ||--o{ loom_versions : "loom_id"
    users ||--o{ looms : "owner_id"
    users ||--o{ drafts : "owner_id"
    yarns ||--o{ skeins : "yarn_id"
    users ||--o{ user_identities : "user_id"
    users ||--o{ yarns : "owner_id"
